Configurar CORS e API URL via variaveis de ambiente para deploy